# fast_api_app

env_2/: pyvenv.cfg
fast_api_app/: Makefile  README.md  pyproject.toml
fast_api_app/docs/: mkdocs.yml
fast_api_app/docs/docs/: index.md
fast_api_app/fast_api_app/: __init__.py  dataset.py  features.py  plots.py
fast_api_app/fast_api_app/modeling/: predict.py  train.py
