[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fast_api_app"
version = "0.0.1"
description = "assignment project for week 2"
authors = [
  { name = "prabin-7" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["fast_api_app"]
include = ["pyproject.toml", "fast_api_app/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["fast_api_app"]
force-sort-within-sections = true

